marvelstyle.css
p{
    text-align: center;
    margin: auto;
    padding-bottom: 50px;
    font-size: 130%;
}
.radom {
  display: block;
  margin: 0 auto;
  padding: bottom 50px; 
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  letter-spacing: 2px;
  text-decoration: none;
  text-transform: uppercase;
  color: #000;
  cursor: pointer;
  border: 3px solid;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}


.radom:hover {
  box-shadow: 0px 0px 0px 0px;
  top: 5px;
  left: 5px;
}

@media (min-width: 768px) {
  .button-54 {
    padding: 0.25em 0.75em;
  }
  }

@media (max-width: 1024px) {
  .jefftip{
  position: absolute;
  right: 5vh;
  top: -10vh;
  font-size: 70%;
}
  }
  
.collapsible {
  background-color: #777;
  margin-top: 50px;
  color: white;
  cursor: pointer;
  padding: 18px;
  width: 40%;
  border: none;
  border-radius: 20px;
  text-align: left;
  outline: none;
  font-size: 15px;
}

.active, .collapsible:hover {
  background-color: #555;
}

.content {
  padding: 0 18px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  border: none;
  border-radius: 20px;
  background-color: rgb(180, 180, 180);
}

.jeffery{
  position: absolute;
  left: clamp(55%, 80vw, 78%);
  top: clamp(40px, 50vh, 600px);
  width: clamp(160px, 22vw, 280px);

}

h1{
    text-align: center;
    font-size: 300%;
}
body{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background: #ffffff;
    background: radial-gradient(circle,rgba(255, 255, 255, 1) 0%, rgba(222, 222, 222, 1) 50%, rgba(196, 196, 196, 1) 100%);
    
}

h2 {
  background-color: #575757;
  width: fit-content;
  color: white;
}


.jefftip{
  margin: 0 0 10px 0;
}

.jeffery img{
  width: 100%;
  height: auto;
  display: block;
}

@media (max-width: 700px) {
  .jeffery{
    position: static;
    width: 200px;
    margin: 30px auto 0;
  }
  .jefftip{
     position: static;
     text-align: center;
  }
}

